[Chore] Add week-1 components

--- a/docs/leet-code/week-1/01-array-strings/1.md
+++ b/docs/leet-code/week-1/01-array-strings/1.md
@@ -4,6 +4,6 @@ sidebar_position: 1
 
 # 48. Rotate Image
 
-```python novice-high/02/02/2
+```python leet-code/week-1/01-array-strings/1
 print("Hello, World!")
 ```
