--- a/docs/leet-code/week-1/01-array-strings/3.md
+++ b/docs/leet-code/week-1/01-array-strings/3.md
@@ -4,6 +4,6 @@ sidebar_position: 3
 
 # 56. Merge Intervals
 
-```python novice-high/02/02/2
+```python leet-code/week-1/01-array-strings/3
 print("Hello, World!")
 ```
