--- a/docs/leet-code/week-1/01-array-strings/4.md
+++ b/docs/leet-code/week-1/01-array-strings/4.md
@@ -4,6 +4,6 @@ sidebar_position: 4
 
 # 238. Product of Array Except Self
 
-```python novice-high/02/02/2
+```python leet-code/week-1/01-array-strings/4
 print("Hello, World!")
 ```
