--- a/docs/leet-code/week-1/02-linked-lists/3.md
+++ b/docs/leet-code/week-1/02-linked-lists/3.md
@@ -4,6 +4,6 @@ sidebar_position: 3
 
 # 141. Linked List Cycle
 
-```python novice-high/02/04/3
+```python leet-code/week-1/02-linked-lists/3
 print("Hello, World!")
 ```
