--- a/docs/leet-code/week-1/03-two-pointers/2.md
+++ b/docs/leet-code/week-1/03-two-pointers/2.md
@@ -4,6 +4,6 @@ sidebar_position: 2
 
 # 11. Container With Most Water
 
-```python novice-high/02/05/2
+```python leet-code/week-1/03-two-pointers/2
 print("Hello, World!")
 ```
