--- a/docs/leet-code/week-1/01-array-strings/2.md
+++ b/docs/leet-code/week-1/01-array-strings/2.md
@@ -4,6 +4,6 @@ sidebar_position: 2
 
 # 54. Spiral Matrix
 
-```python novice-high/02/02/2
+```python leet-code/week-1/01-array-strings/2
 print("Hello, World!")
 ```
