--- a/docs/leet-code/week-1/02-linked-lists/1.md
+++ b/docs/leet-code/week-1/02-linked-lists/1.md
@@ -4,6 +4,6 @@ sidebar_position: 1
 
 # 19. Remove Nth Node From End of List
 
-```python novice-high/02/04/3
+```python leet-code/week-1/02-linked-lists/1
 print("Hello, World!")
 ```
