--- a/docs/leet-code/week-1/02-linked-lists/2.md
+++ b/docs/leet-code/week-1/02-linked-lists/2.md
@@ -4,6 +4,6 @@ sidebar_position: 2
 
 # 25. Reverse Nodes in k-Group
 
-```python novice-high/02/04/3
+```python leet-code/week-1/02-linked-lists/2
 print("Hello, World!")
 ```
