--- a/docs/leet-code/week-1/03-two-pointers/1.md
+++ b/docs/leet-code/week-1/03-two-pointers/1.md
@@ -4,6 +4,6 @@ sidebar_position: 1
 
 # 125. Valid Palindrome
 
-```python novice-high/02/05/2
+```python leet-code/week-1/03-two-pointers/1
 print("Hello, World!")
 ```
