--- a/docs/leet-code/week-1/03-two-pointers/3.md
+++ b/docs/leet-code/week-1/03-two-pointers/3.md
@@ -4,6 +4,6 @@ sidebar_position: 3
 
 # 42. Trapping Rain Water
 
-```python novice-high/02/05/2
+```python leet-code/week-1/03-two-pointers/3
 print("Hello, World!")
 ```
