[Add] add links to problem directly

--- a/docs/leet-code/week-1/01-array-strings/2.md
+++ b/docs/leet-code/week-1/01-array-strings/2.md
@@ -3,6 +3,8 @@ sidebar_position: 2
 ---
 
 # 54. Spiral Matrix
+#
+[**View Problem**](https://leetcode.com/problems/spiral-matrix)
 
 ```python leet-code/week-1/01-array-strings/2
 print("Hello, World!")
