--- a/docs/leet-code/week-1/02-linked-lists/1.md
+++ b/docs/leet-code/week-1/02-linked-lists/1.md
@@ -3,6 +3,8 @@ sidebar_position: 1
 ---
 
 # 19. Remove Nth Node From End of List
+#
+[**View Problem**](https://leetcode.com/problems/remove-nth-node-from-end-of-list)
 
 ```python leet-code/week-1/02-linked-lists/1
 print("Hello, World!")
