--- a/docs/leet-code/week-1/02-linked-lists/3.md
+++ b/docs/leet-code/week-1/02-linked-lists/3.md
@@ -3,6 +3,8 @@ sidebar_position: 3
 ---
 
 # 141. Linked List Cycle
+#
+[**View Problem**](https://leetcode.com/problems/linked-list-cycle)
 
 ```python leet-code/week-1/02-linked-lists/3
 print("Hello, World!")
