--- a/docs/leet-code/week-1/03-two-pointers/1.md
+++ b/docs/leet-code/week-1/03-two-pointers/1.md
@@ -3,6 +3,8 @@ sidebar_position: 1
 ---
 
 # 125. Valid Palindrome
+#
+[**View Problem**](https://leetcode.com/problems/valid-palindrome)
 
 ```python leet-code/week-1/03-two-pointers/1
 print("Hello, World!")
