--- a/docs/leet-code/week-1/03-two-pointers/3.md
+++ b/docs/leet-code/week-1/03-two-pointers/3.md
@@ -3,6 +3,8 @@ sidebar_position: 3
 ---
 
 # 42. Trapping Rain Water
+#
+[**View Problem**](https://leetcode.com/problems/trapping-rain-water)
 
 ```python leet-code/week-1/03-two-pointers/3
 print("Hello, World!")
