--- a/docs/leet-code/week-1/01-array-strings/1.md
+++ b/docs/leet-code/week-1/01-array-strings/1.md
@@ -3,6 +3,8 @@ sidebar_position: 1
 ---
 
 # 48. Rotate Image
+#
+[**View Problem**](https://leetcode.com/problems/rotate-image)
 
 ```python leet-code/week-1/01-array-strings/1
 print("Hello, World!")
