--- a/docs/leet-code/week-1/01-array-strings/3.md
+++ b/docs/leet-code/week-1/01-array-strings/3.md
@@ -3,6 +3,8 @@ sidebar_position: 3
 ---
 
 # 56. Merge Intervals
+#
+[**View Problem**](https://leetcode.com/problems/merge-intervals)
 
 ```python leet-code/week-1/01-array-strings/3
 print("Hello, World!")
