--- a/docs/leet-code/week-1/01-array-strings/4.md
+++ b/docs/leet-code/week-1/01-array-strings/4.md
@@ -3,6 +3,8 @@ sidebar_position: 4
 ---
 
 # 238. Product of Array Except Self
+#
+[**View Problem**](https://leetcode.com/problems/product-of-array-except-self)
 
 ```python leet-code/week-1/01-array-strings/4
 print("Hello, World!")
