--- a/docs/leet-code/week-1/02-linked-lists/2.md
+++ b/docs/leet-code/week-1/02-linked-lists/2.md
@@ -3,6 +3,8 @@ sidebar_position: 2
 ---
 
 # 25. Reverse Nodes in k-Group
+#
+[**View Problem**](https://leetcode.com/problems/reverse-nodes-in-k-group)
 
 ```python leet-code/week-1/02-linked-lists/2
 print("Hello, World!")
