[Add] compare codes for week-3

--- a/docs/leet-code/week-3/1.md
+++ b/docs/leet-code/week-3/1.md
@@ -7,5 +7,12 @@ sidebar_position: 1
 [**View Problem**](https://leetcode.com/problems/daily-temperatures)
 
 ```python 0739-daily-temperatures
-print("Hello, World!")
+import random
+
+sizes = [100, 1000, 10000, 100000]
+datas = [
+    [random.randint(30, 100) for i in range(size)]
+    for size in sizes
+]
+func_name = "dailyTemperatures"
 ```
