--- a/docs/leet-code/week-3/2.md
+++ b/docs/leet-code/week-3/2.md
@@ -7,5 +7,16 @@ sidebar_position: 2
 [**View Problem**](https://leetcode.com/problems/valid-sudoku)
 
 ```python 0036-valid-sudoku
-print("Hello, World!")
+import random
+
+elem = ["."] + [str(i) for i in range(1, 10)]
+sizes = [1]
+datas = [
+    [
+        [elem[random.randint(0, 9)] for _ in range(9)]
+        for _ in range(9)
+    ]
+]
+
+func_name = "isValidSudoku"
 ```
