--- a/docs/leet-code/week-3/3.md
+++ b/docs/leet-code/week-3/3.md
@@ -7,5 +7,12 @@ sidebar_position: 3
 [**View Problem**](https://leetcode.com/problems/group-anagrams)
 
 ```python 0049-group-anagrams
-print("Hello, World!")
+sizes = [3]
+datas = [
+    ["eat","tea","tan","ate","nat","bat"],
+    [""],
+    ["a"]
+]
+
+func_name = "groupAnagrams"
 ```
