--- a/docs/leet-code/week-3/4.md
+++ b/docs/leet-code/week-3/4.md
@@ -7,5 +7,11 @@ sidebar_position: 4
 [**View Problem**](https://leetcode.com/problems/kth-smallest-element-in-a-bst)
 
 ```python 0230-kth-smallest-element-in-a-bst
-print("Hello, World!")
+sizes = [2]
+datas = [
+    (list_to_tree([3,1,4,None,2]), 1),
+    (list_to_tree([5,3,6,2,4,None,None,1]), 3)
+]
+
+func_name = "kthSmallest"
 ```
